--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
     "bootstrap": "^5.3.3",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
+    "jsencrypt": "^3.3.2",
     "jsonwebtoken": "^9.0.2",
+    "keycloak-connect": "^26.0.6",
     "multer": "^1.4.5-lts.1",
     "os": "^0.1.2",
     "uuid": "^10.0.0",
