--- a/package.json
+++ b/package.json
@@ -5,14 +5,18 @@
     "bootstrap": "^5.3.3",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
+    "express-session": "latest",
     "jsencrypt": "^3.3.2",
     "jsonwebtoken": "^9.0.2",
-    "keycloak-connect": "^26.0.6",
+    "keycloak-connect": "latest",
+    "keycloak-js": "^26.0.6",
     "multer": "^1.4.5-lts.1",
+    "nodemon": "^3.1.7",
     "os": "^0.1.2",
     "uuid": "^10.0.0",
-    "ws": "^8.18.0",
-    "keycloak-connect": "latest",
-    "express-session": "latest"
+    "ws": "^8.18.0"
+  },
+  "scripts": {
+    "start": "nodemon main.js"
   }
 }
