completely changed UI, uses tailwind now

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "bootstrap": "^5.3.3",
+    "daisyui": "^4.12.21",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
     "express-session": "latest",
@@ -13,10 +14,12 @@
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.7",
     "os": "^0.1.2",
+    "tailwindcss": "^3.4.16",
     "uuid": "^10.0.0",
     "ws": "^8.18.0"
   },
   "scripts": {
-    "start": "nodemon main.js"
+    "start": "nodemon main.js",
+    "tailwindcss": "npx tailwindcss -i ./input.css -o ./frontend/public/src/output.css --watch"
   }
 }
