--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "ws": "^8.18.0"
   },
   "scripts": {
-    "start": "nodemon main.js",
+    "start": "nodemon --ignore '*.json' main.js",
     "tailwindcss": "npx tailwindcss -i ./input.css -o ./frontend/public/src/output.css --watch"
   }
 }
