--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.7",
     "os": "^0.1.2",
+    "tailwind-scrollbar": "^3.1.0",
     "tailwindcss": "^3.4.16",
     "uuid": "^10.0.0",
     "ws": "^8.18.0"
@@ -21,5 +22,8 @@
   "scripts": {
     "start": "nodemon --ignore '*.json' main.js",
     "tailwindcss": "npx tailwindcss -i ./input.css -o ./frontend/public/src/output.css --watch"
+  },
+  "devDependencies": {
+    "@tailwindcss/typography": "^0.5.15"
   }
 }
